Fix spacing spacing styles and quotation tag position

--- a/css/main.css
+++ b/css/main.css
@@ -436,11 +436,11 @@ body {
 .card {
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
-  width: 32rem;
+  gap: 2.4rem;
+  width: 34rem;
   background-color: #1f1f1f;
   border-radius: 1rem;
-  padding: 3.5rem; }
+  padding: 3.6rem; }
 
 .button {
   display: block;
