--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,9 +1,9 @@
 .card {
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
-  width: 32rem;
+  gap: 2.4rem;
+  width: 34rem;
   background-color: $surface;
   border-radius: 1rem;
-  padding: 3.5rem;
+  padding: 3.6rem;
 }
